DTS-44666: changes var name